# PluginsUi

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  macro.h
src/core/: CMakeLists.txt  global.h
src/core/engine/: table_engine.cpp  table_engine.h
src/plugins/: CMakeLists.txt  plugin_interface.h
src/plugins/excel/: excel_importer.cpp  excel_importer.h
src/ui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
src/ui/internal/: init_ui.cpp  init_ui.h  loader.cpp  main_dock_widget.cpp  main_dock_widget.h  main_menu_bar.cpp  main_menu_bar.h  main_menu_bar.ui  main_tree_view.cpp  main_tree_view.h  main_window.cpp  main_window.h  main_window.ui
src/ui/internal/table/: discrete_matrix.cpp  discrete_matrix.h  table_container.cpp  table_container.h  table_data.cpp  table_data.h  table_model.cpp  table_model.h  table_view.cpp  table_view.h
src/ui/internal/toolbar/: init_left_tool_bar.cpp  init_left_tool_bar.h  init_right_tool_bar.cpp  init_right_tool_bar.h  main_tool_bar.cpp  main_tool_bar.h
src/ui/public/: global.h  loader.h  macro.h  widget_container.h
src/ui/resource/: ui.qrc
src/ui/resource/ai/: index.html
src/ui/resource/ai/css/: chat-component.css  chat-container.css  input-container.css  main.css
src/ui/resource/ai/js/: constants.js  guide.js  init.js  input-container.js  resize-handle.js
